Prevent scrollbar content shift

--- a/src/css/component/gradio/container.less
+++ b/src/css/component/gradio/container.less
@@ -31,6 +31,7 @@
     max-height: 100vh;
     max-width: 100vw;
     overflow: auto;
+    scrollbar-gutter: stable;
     -moz-osx-font-smoothing: grayscale;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
